--- a/presentation/src/main/res/layout/list_item_country.xml
+++ b/presentation/src/main/res/layout/list_item_country.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tool="http://schemas.android.com/tools"
     android:weightSum="10"
-    style="@style/LinearLayoutForListItemStyle"
-    tool:ignore="UseCompoundDrawables">
+    style="@style/LinearLayoutForListItemStyle">
 
     <ImageView
         android:id="@+id/ivFlag"
