--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:padding">@dimen/offset_4</item>
     </style>
