dummy cities added

--- a/presentation/src/main/res/layout/activity_home.xml
+++ b/presentation/src/main/res/layout/activity_home.xml
@@ -76,14 +76,18 @@
             android:id="@+id/floatBtnSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/offset_16"
             android:clickable="true"
             android:drawingCacheQuality="auto"
             android:fadeScrollbars="true"
             android:focusable="true"
             android:onClick="@{() -> viewModel.onFloatBtnClicked()}"
             android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_marginEnd="@dimen/offset_40"
             app:fabSize="auto"
+            app:elevation="@dimen/elevation_4"
+            app:rippleColor="@android:color/black"
+            app:useCompatPadding="true"
             app:layout_anchor="@id/app_bar"
             app:layout_anchorGravity="bottom|end"
             app:maxImageSize="48dp"
@@ -103,10 +107,10 @@
             android:soundEffectsEnabled="true"
             android:visibility="gone"
             android:onClick="@{() -> viewModel.onFloatBtnClicked()}"
-            app:elevation="4dp"
-            app:fabCustomSize="224dp"
+            app:elevation="@dimen/elevation_4"
+            app:fabCustomSize="@dimen/fab_customSize"
             app:fabSize="auto"
-            app:maxImageSize="192dp"
+            app:maxImageSize="@dimen/fab_max_image_size"
             app:rippleColor="@android:color/black"
             app:srcCompat="@drawable/ic_countries_seen" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
