--- a/presentation/src/main/res/layout/item_city_content.xml
+++ b/presentation/src/main/res/layout/item_city_content.xml
@@ -11,7 +11,7 @@
     android:animationCache="true"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@android:color/transparent"
-    card_view:cardCornerRadius="@dimen/cardview_radius"
+    card_view:cardCornerRadius="@dimen/radius_cardview"
     card_view:cardElevation="@dimen/elevation_2"
     card_view:cardUseCompatPadding="true">
 
