--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimaryDark">#011638</color>
     <color name="colorAccent">#d50000</color>
     <color name="colorBlack">@android:color/black</color>
+    <color name="bgDarkDialogue">#37474F</color>
+    <color name="lightGrey">#EAEAEA</color>
 </resources>
