--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--region Padding/Margin/Offset-->
+    <!-- region Padding/Margin/Offset -->
     <dimen name="offset_4">4dp</dimen>
     <dimen name="offset_8">8dp</dimen>
+    <dimen name="offset_10">10dp</dimen>
     <dimen name="offset_16">16dp</dimen>
     <dimen name="offset_40">40dp</dimen>
     <dimen name="offset_64">64dp</dimen>
 
-    <!--endregion-->
+    <!-- endregion -->
 
-    <!--region Elevation-->
+    <!-- region Elevation -->
     <dimen name="elevation_2">2dp</dimen>
+    <dimen name="elevation_4">4dp</dimen>
 
     <!--region Typography-->
     <!--https://material.io/develop/android/theming/typography/-->
     <!--https://material.io/design/typography/the-type-system.html#type-scale-->
-    <dimen name="headline_6">20sp</dimen>
     <dimen name="caption">12sp</dimen>
+    <dimen name="textAppearanceSubtitle2">14sp</dimen>
+    <dimen name="headline_6">20sp</dimen>
 
     <!-- heights -->
     <dimen name="height_splash_logo">351dp</dimen>
@@ -26,10 +29,11 @@
     <!-- widths -->
     <dimen name="width_splash_logo">361dp</dimen>
 
-    <!-- radius-->
-    <dimen name="cardview_radius">4dp</dimen>
-    <dimen name="offset_10">10dp</dimen>
-    <dimen name="elevation_4">4dp</dimen>
-    <dimen name="fab_customSize">224dp</dimen>
-    <dimen name="fab_max_image_size">192dp</dimen>
+    <!-- radius -->
+    <dimen name="radius_cardview">4dp</dimen>
+    <dimen name="radius_dialogue_corners">12dp</dimen>
+
+    <!-- sizes -->
+    <dimen name="siz_fab_custom">224dp</dimen>
+    <dimen name="size_fab_max_image">192dp</dimen>
 </resources>
