--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -72,4 +72,27 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="RoundShapedDarkAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/popup_dark_background</item>
+    </style>
+
+    <style name="DialogueTitleStyle">
+        <item name="android:textSize">@dimen/textAppearanceSubtitle2</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingStart">@dimen/offset_4</item>
+        <item name="android:paddingEnd">@dimen/offset_4</item>
+        <item name="android:paddingTop">@dimen/offset_8</item>
+    </style>
+
+    <style name="DialogueBtnStyle">
+        <item name="android:clickable">true</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/text_btn_color</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_margin">@dimen/offset_16</item>
+        <item name="android:stateListAnimator">@anim/btn_anim</item>
+        <item name="android:background">@drawable/bg_btn_different_states</item>
+    </style>
 </resources>
