--- a/presentation/src/main/res/layout/dialogue_city.xml
+++ b/presentation/src/main/res/layout/dialogue_city.xml
@@ -26,7 +26,6 @@
         android:textSize="@dimen/headline_6" />
 
     <LinearLayout
-        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -38,6 +37,7 @@
             android:id="@+id/btnGps"
             style="@style/DialogueBtnStyle"
             android:layout_width="0dp"
+            android:padding="@dimen/offset_10"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableStart="@drawable/ic_add_location"
