--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -36,4 +36,5 @@
     <!-- sizes -->
     <dimen name="siz_fab_custom">224dp</dimen>
     <dimen name="size_fab_max_image">192dp</dimen>
+    <dimen name="offset_140">140dp</dimen>
 </resources>
