--- a/presentation/src/main/res/layout/list_item_country.xml
+++ b/presentation/src/main/res/layout/list_item_country.xml
@@ -21,7 +21,7 @@
     <TextView
         android:id="@+id/tvCountry"
         style="@style/TextViewStyle"
-        tool:text="@string/country" />
+        tool:text="@string/visitedCountry" />
 
     <ImageView
         android:id="@+id/more"
