--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -103,4 +103,12 @@
         <item name="android:stateListAnimator">@anim/btn_anim</item>
         <item name="android:background">@drawable/bg_btn_different_states</item>
     </style>
+
+    <style name="ShadowLayout">
+        <item name="containerBackgroundColor">@android:color/black</item>
+        <item name="shadowGravity">bottom</item>
+        <item name="shadowRadius">@dimen/offset_12</item>
+        <item name="containerElevation">@dimen/elevation_12</item>
+        <item name="shadowColor">@android:color/white</item>
+    </style>
 </resources>
