--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -46,4 +46,5 @@
     <!-- sizes -->
     <dimen name="siz_fab_custom">224dp</dimen>
     <dimen name="size_fab_max_image">192dp</dimen>
+    <dimen name="offset_29">29dp</dimen>
 </resources>
