animation background and change aye on click implemented

--- a/presentation/src/main/res/drawable/bg_round_shape_gray.xml
+++ b/presentation/src/main/res/drawable/bg_round_shape_gray.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/bgVisitedCountry" />
+    <solid android:color="@color/colorBgVisitedCountry" />
 
     <padding
         android:bottom="@dimen/offset_2"
