--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -82,7 +82,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="RoundShapedDarkAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:windowBackground">@drawable/popup_dark_background</item>
+        <item name="android:windowBackground">@drawable/bg_popup_dark</item>
     </style>
 
     <style name="DialogueTitleStyle">
@@ -114,6 +114,11 @@
 
     <style name="CasualTextAppearance">
         <item name="android:fontFamily">casual</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowDx">2</item>
+        <item name="android:shadowRadius">10</item>
+        <item name="android:shadowColor">@android:color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
+
 </resources>
