--- a/presentation/src/main/res/layout/activity_flag.xml
+++ b/presentation/src/main/res/layout/activity_flag.xml
@@ -14,15 +14,19 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 app:theme="@style/ToolbarTitleStyle"
+                app:titleTextColor="@android:color/white"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:layout_width="match_parent"
                 app:navigationIcon="?attr/homeAsUpIndicator"
                 android:layout_height="?attr/actionBarSize">
 
                 <TextView
-                    android:id="@+id/toolbarTitle"
+                    android:id="@+id/tvToolbarTitle"
+                    android:gravity="center"
+                    android:paddingEnd="@dimen/offset_64"
+                    android:paddingStart="0dp"
                     style="@style/ToolbarTitleStyle"
-                    tool:text="Gallery" />
+                    tool:text="Flag" />
             </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
     <androidx.viewpager2.widget.ViewPager2
