--- a/presentation/src/main/res/drawable/bg_launch_screen.xml
+++ b/presentation/src/main/res/drawable/bg_launch_screen.xml
@@ -1,9 +1,49 @@
-<?xml version="1.0" encoding="utf-8"?><!-- The android: opacity = ”opaque” attribute is extremely important to prevent colorBlack flashes when moving to home theme. -->
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:opacity="opaque">
-    <item android:drawable="@android:color/white"/>
-    <item android:drawable="@drawable/ic_countries_seen"
-        android:width="@dimen/width_splash_logo"
-        android:height="@dimen/height_splash_logo"
-        android:gravity="center"/>
-</layer-list>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="360dp"
+    android:height="640dp"
+    android:viewportWidth="360"
+    android:viewportHeight="640">
+  <path
+      android:pathData="M0,0h360v640h-360z"
+      android:fillColor="#EEEFF1"/>
+  <group>
+    <clip-path
+        android:pathData="M0,0h360v640h-360z"/>
+    <path
+        android:pathData="M0,142.001C42.667,197.001 134.5,315.301 160.5,348.501C193,390.001 286.5,486.501 360.5,513.501C360.5,514.164 366.5,515.844 366.5,516.5C366.5,517.411 365,518.779 365,519.501C365,520.138 360.5,519.161 360.5,519.501C329.833,510.501 244.4,463.701 148,348.501C27.5,204.501 56.5,235.001 0,162.501C0,160.432 -23,162.493 -23,160C-23,158.869 -21.673,153.879 -20.386,149.023L-18,139C-18,136.154 0,143.634 0,142.001Z"
+        android:fillColor="#F4F4F6"/>
+    <path
+        android:pathData="M0,225L-24,221L-6,648.5H366L381,541.5C376.333,546.667 365.7,555.9 360.5,551.5C237.3,527.1 68.833,323.667 0,225Z"
+        android:fillColor="#F3F3F5"/>
+  </group>
+  <path
+      android:pathData="M169,343.018C98.2,257.024 29.167,237.192 0,238.025V640H360V525.507C291.5,489.509 257.5,450.512 169,343.018Z"
+      android:strokeAlpha="0.02"
+      android:fillColor="#000000"
+      android:fillAlpha="0.02"/>
+  <path
+      android:pathData="M360,577.5C233.6,567.1 67.667,366 0,266V640H360V577.5Z"
+      android:strokeAlpha="0.05"
+      android:fillColor="#000000"
+      android:fillAlpha="0.05"/>
+  <path
+      android:pathData="M171.5,428.346C91.1,355.665 23.667,335.165 0,334V640H360V549.648C333,549.648 272,519.197 171.5,428.346Z"
+      android:strokeAlpha="0.02"
+      android:fillColor="#000000"
+      android:fillAlpha="0.02"/>
+  <path
+      android:pathData="M198,468.353C122,417.258 34.333,399.495 0,397V640H360V550.684C347.5,550.684 293,532.222 198,468.353Z"
+      android:strokeAlpha="0.02"
+      android:fillColor="#000000"
+      android:fillAlpha="0.02"/>
+  <path
+      android:pathData="M360,501C174.5,601 50.333,468.833 0,381L0.002,640H359.999L360,622.705C360,600.904 360,561.3 360,501Z"
+      android:strokeAlpha="0.02"
+      android:fillColor="#000000"
+      android:fillAlpha="0.02"/>
+  <path
+      android:pathData="M143,517.638C94.332,494.516 26.667,479.191 0,471V640H360V500.588C265,550.736 190.5,540.205 143,517.638Z"
+      android:strokeAlpha="0.02"
+      android:fillColor="#000000"
+      android:fillAlpha="0.02"/>
+</vector>
