adapt for android 21 and 22

--- a/presentation/src/main/res/drawable-v23/gradient_green.xml
+++ b/presentation/src/main/res/drawable-v23/gradient_green.xml
@@ -2,14 +2,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <item
+        android:width="@dimen/width_smallest_screen"
         android:gravity="center">
         <shape
             android:shape="oval">
             <gradient
-                android:angle="225"
-                android:centerColor="@color/colorPrimaryDark"
-                android:endColor="#510A90"
-                android:startColor="#031B71" />
+                android:angle="45"
+                android:endColor="#CCE100"
+                android:centerColor="#006A05"
+                android:startColor="#00ADFB" />
         </shape>
     </item>
 </layer-list>
