--- a/presentation/src/main/res/drawable-v23/pic_pie_chart_center.xml
+++ b/presentation/src/main/res/drawable-v23/pic_pie_chart_center.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!-- The android: opacity = ”opaque” attribute is extremely important to prevent colorBlack flashes when moving to home theme. -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:opacity="opaque">
     <item>
         <shape android:shape="oval">
@@ -15,6 +14,5 @@
         android:end="@dimen/offset_20"
         android:gravity="center"
         android:start="@dimen/offset_20"
-        android:top="@dimen/offset_26"
-        tools:ignore="UnusedAttribute" />
+        android:top="@dimen/offset_26" />
 </layer-list>
