--- a/presentation/src/main/res/drawable-v23/gradient_blue.xml
+++ b/presentation/src/main/res/drawable-v23/gradient_blue.xml
@@ -2,6 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
     <item
+        android:width="@dimen/width_smallest_screen"
         android:gravity="center">
         <shape
             android:shape="oval">
